<resources>
    <string name="app_name">NewsAppWithNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="news">Haberler</string>
    <string name="weather">Hava Durumu</string>
    <string name="detail">Detay</string>
    <string name="news_resources">Haber Kaynakları</string>
    <string name="webtekno">Webtekno</string>
    <string name="mynet">Mynet</string>
    <string name="shiftdelete">Shiftdelete</string>
    <string name="webrazzi">Webrazzi</string>
    <string name="chip">Chip</string>
    <string name="donanimhaber">Donanım Haber</string>
    <string name="log">Log</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="widget_news_title_1">Rocket League Efsanesinin Mobil Oyunu \'Rocket League Sideswipes\' Yayınlandı</string>
    <string name="widget_news_title_2">Microsoft CEO\'su, Şirketteki Hisselerinin Yarısını Sattı: İşte Nedeni</string>
    <string name="widget_news_title_3">Günler öncesinde hayranlarına “Ben ölmedim” diye seslenmişti! Ünlü YouTuber Tor Eckhoff, video çekerken hayatını kaybetti</string>
    <string name="widget_news_title_4">Amazon, ARM tabanlı sunucular için Graviton3 işlemcisini duyurdu!</string>
    <string name="special_message">Thanos haklıydı.</string>
    <string name="most_popular_news">En Popüler Haberler</string>
    <string name="game">OYUN</string>
    <string name="minutes_ago">28 dakika önce</string>
    <string name="sectorel">SEKTÖREL</string>
    <string name="two_hours_ago">2 saat önce</string>
    <string name="life">HAYAT</string>
    <string name="four_hours_Ago">4 saat önce</string>
    <string name="technology">TEKNOLOJİ</string>
    <string name="five_hours_ago">5 saat önce</string>
    <string name="my_name">Ahmet Faruk Çuha</string>
    <string name="my_mail">ahmetfarukcuha@hotmail.com</string>
    <string name="current_location">MERSIN</string>
    <string name="current_degree">14°</string>
    <string name="weeklyy_view">HAFTALIK GÖRÜNÜM</string>


</resources>